--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,51 @@
+:root {
+  --primary-color: #232323;
+  --placeholder-color: #6a6a6a;
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #121212;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+* {
+  box-sizing: border-box;
+}
+
+*::-webkit-scrollbar {
+  display: none;
+}
+
+input {
+  background-color: var(--primary-color);
+  color: white;
+  border: 0px;
+  border-radius: 8px;
+  padding: 1em 0.95em;
+  font-size: 0.84rem;
+  font-weight: 500;
+}
+
+button {
+  border: 0px;
+  border-radius: 8px;
+  padding: 1em 0.95em;
+}
+
+*::placeholder {
+  color: var(--placeholder-color);
+}
+
+*:focus-visible {
+  outline: none;
 }
