--- a/src/components/styles/AddQuestion.module.css
+++ b/src/components/styles/AddQuestion.module.css
@@ -2,13 +2,18 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 34em;
+  width: 38em;
   max-width: 100vw;
   height: 100vh;
   overflow-y: scroll;
   padding: 0.8em 0.5em;
   margin: 0 auto;
   background-color: #1a1a1a;
+}
+
+.date {
+  padding: 1.4em 0.8em;
+  width: 45%;
 }
 
 .input:focus:invalid {
