--- a/src/components/styles/QuestionItem.module.css
+++ b/src/components/styles/QuestionItem.module.css
@@ -3,6 +3,7 @@
   flex-direction: column;
   align-items: center;
   gap: 1.2em;
+  margin-top: 2.5rem;
 }
 
 .question__item > header {
@@ -44,4 +45,16 @@
   background-color: var(--primary-color);
   color: white;
   resize: none;
+}
+
+.delete {
+  width: 87%;
+  margin-top: 0.8em;
+  font-size: 0.9em;
+  color: white;
+  background-color: #f44436;
+}
+
+.validity:invalid {
+  border: 1.8px solid red;
 }
