--- a/src/components/styles/QuestionItem.module.css
+++ b/src/components/styles/QuestionItem.module.css
@@ -3,7 +3,7 @@
   flex-direction: column;
   align-items: center;
   gap: 1.2em;
-  margin-top: 2.5rem;
+  margin-top: 0.5rem;
 }
 
 .question__item > header {
@@ -49,12 +49,12 @@
 
 .delete {
   width: 87%;
-  margin-top: 0.8em;
+  margin-top: 1em;
   font-size: 0.9em;
   color: white;
   background-color: #f44436;
 }
 
 .validity:invalid {
-  border: 1.8px solid red;
+  border: 1.6px solid rgb(255, 0, 0, 0.6);
 }
